--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     ],
     "require": {
         "php": ">=5.4.0",
-        "guzzlehttp/guzzle": "5.*",
+        "guzzlehttp/guzzle": ">5.*",
         "zimbra-api/struct": "~1.0"
     },
     "require-dev": {
